SRCH-4851: fix for best bets link spacing issue

--- a/app/javascript/components/Results/Results.css
+++ b/app/javascript/components/Results/Results.css
@@ -332,3 +332,10 @@
       z-index: 501;
   }
 }
+
+@media (min-width: 30em){
+  .graphics-best-bets .result-thumbnail {
+    height: 93px;
+    width: 21%;
+  }
+}
